| Bug #58258 | Valgrind: possibly lost from ib_bh_create() | ||
|---|---|---|---|
| Submitted: | 17 Nov 2010 14:37 | Modified: | 19 Jan 2011 0:36 |
| Reporter: | Vasil Dimov | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: InnoDB storage engine | Severity: | S3 (Non-critical) |
| Version: | trunk-innodb | OS: | Any |
| Assigned to: | Sunny Bains | CPU Architecture: | Any |
| Tags: | disabled, ib_bh_create, innodb, pb2, test failure, valgrind | ||
[17 Nov 2010 14:37]
Vasil Dimov
[17 Nov 2010 14:47]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/124163 3323 Vasil Dimov 2010-11-17 Disable tests due to Bug#58258 Valgrind: possibly lost from ib_bh_create()
[18 Nov 2010 18:35]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/124254 3327 Vasil Dimov 2010-11-18 Enable tests after Bug#58258 has been fixed.
[5 Dec 2010 12:38]
Bugs System
Pushed into mysql-trunk 5.6.1 (revid:alexander.nozdrin@oracle.com-20101205122447-6x94l4fmslpbttxj) (version source revid:alexander.nozdrin@oracle.com-20101205122447-6x94l4fmslpbttxj) (merge vers: 5.6.1) (pib:23)
[10 Dec 2010 8:38]
Alexander Nozdrin
Bug#58739 has been marked as a duplicate of this one.
[16 Dec 2010 9:22]
Alexander Nozdrin
The second warning has been fixed. The first warning now looks like this: ==1988== 262,176 bytes in 1 blocks are definitely lost in loss record 120 of 129 ==1988== at 0x4C20E1C: malloc (vg_replace_malloc.c:195) ==1988== by 0x9A5762: ut_malloc_low (ut0mem.c:106) ==1988== by 0x9A5A93: ut_malloc (ut0mem.c:238) ==1988== by 0x9A6545: ib_bh_create (ut0bh.c:132) ==1988== by 0x99C4A3: trx_sys_create (trx0sys.c:1057) ==1988== by 0x98A3E5: innobase_start_or_create_for_mysql (srv0start.c:1532) ==1988== by 0x949F8C: innobase_init(void*) (ha_innodb.cc:2648) ==1988== by 0x747033: ha_initialize_handlerton(st_plugin_int*) (handler.cc:475) ==1988== by 0x5EAC41: plugin_initialize(st_plugin_int*) (sql_plugin.cc:1063) ==1988== by 0x5ED41C: plugin_init(int*, char**, int) (sql_plugin.cc:1344) ==1988== by 0x552A75: init_server_components() (mysqld.cc:4107) ==1988== by 0x5542CB: mysqld_main(int, char**) (mysqld.cc:4667) ==1988== by 0x547AE2: main (main.cc:24)
[22 Dec 2010 21:31]
Bugs System
Pushed into mysql-trunk 5.6.1 (revid:alexander.nozdrin@oracle.com-20101222212842-y0t3ibtd32wd9qaw) (version source revid:alexander.nozdrin@oracle.com-20101222212842-y0t3ibtd32wd9qaw) (merge vers: 5.6.1) (pib:24)
